y.output
Terminais não utilizados na gramática

   _MAIOR
   _MENOR
   _ATRIB
   _INTEGER


Gramática

    0 $accept: S $end

    1 S: MIOLOS ABRE PRINCIPAL FECHA

    2 ABRE: _HTPL

    3 FECHA: _BARRAHTPL

    4 MIOLOS: MIOLO MIOLOS
    5       | %empty

    6 MIOLO: DECLS
    7      | FUNCTION

    8 DECLS: DECL ';'

    9 DECL: TIPO ID
   10     | TIPO ID '=' _CTE_INTEGER
   11     | TIPO ID '=' _CTE_FLOAT
   12     | TIPO ID VETOR

   13 TIPO: _INT
   14     | _FLOAT
   15     | _DOUBLE
   16     | _CHAR
   17     | _STRING

   18 ID: ID ',' _ID
   19   | _ID

   20 FUNCTION: '<' _FUNCTION _ID '(' ARGS ')' '>' CMD '<' '/' _FUNCTION '>'

   21 ARGS: IDS
   22     | %empty

   23 IDS: TIPO _ID ',' IDS
   24    | TIPO _ID

   25 PRINCIPAL: CMDS

   26 CMDS: CMD CMDS
   27     | %empty

   28 CMD: SAIDA ';'
   29    | CMD_IF
   30    | CMD_FOR
   31    | BLOCO
   32    | CMD_ATRIB ';'

   33 CMD_ATRIB: ID '=' E

   34 VETOR: '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   36      | '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   37      | '[' _CTE_INTEGER ']'

   38 CONDICAO: E '>' E
   39         | E '<' E
   40         | E _COMPARACAO E

   41 CMD_FOR: '<' _FOR '(' _ID '=' E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'

   42 BLOCO: _BLOCK CMDS _BARRABLOCK

   43 CMD_IF: '<' _IF '(' CONDICAO ')' '>' CMD '<' '/' _IF '>'
   44       | '<' _IF '(' CONDICAO ')' '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

   45 SAIDA: _PRINT '(' E ')'

   46 E: E '+' E
   47  | E '-' E
   48  | E '*' E
   49  | E '/' E
   50  | E '%' E
   51  | E _MAISMAIS
   52  | F

   53 F: _CTE_STRING
   54  | _CTE_FLOAT
   55  | _CTE_INTEGER
   56  | _ID
   57  | '(' E ')'


Terminais, com as regras onde eles aparecem

$end (0) 0
'%' (37) 50
'(' (40) 20 41 43 44 45 57
')' (41) 20 41 43 44 45 57
'*' (42) 48
'+' (43) 46
',' (44) 18 23
'-' (45) 47
'/' (47) 20 41 43 44 49
';' (59) 8 28 32 41
'<' (60) 20 39 41 43 44
'=' (61) 10 11 33 41
'>' (62) 20 38 41 43 44
'[' (91) 34 35 36 37
']' (93) 34 35 36 37
error (256)
_ID (258) 18 19 20 23 24 41 56
_IF (259) 43 44
_ELSE (260) 44
_HTPL (261) 2
_COMPARACAO (262) 40
_BARRAHTPL (263) 3
_CTE_FLOAT (264) 11 54
_MAIOR (265)
_MENOR (266)
_BLOCK (267) 42
_BARRABLOCK (268) 42
_MAISMAIS (269) 51
_FOR (270) 41
_ATRIB (271)
_FUNCTION (272) 20
_PRINT (273) 45
_INT (274) 13
_FLOAT (275) 14
_DOUBLE (276) 15
_CHAR (277) 16
_INTEGER (278)
_STRING (279) 17
_CTE_STRING (280) 53
_CTE_INTEGER (281) 10 34 35 36 37 55


Não-terminais com as regras onde eles aparecem

$accept (41)
    à esquerda: 0
S (42)
    à esquerda: 1, à direita: 0
ABRE (43)
    à esquerda: 2, à direita: 1
FECHA (44)
    à esquerda: 3, à direita: 1
MIOLOS (45)
    à esquerda: 4 5, à direita: 1 4
MIOLO (46)
    à esquerda: 6 7, à direita: 4
DECLS (47)
    à esquerda: 8, à direita: 6
DECL (48)
    à esquerda: 9 10 11 12, à direita: 8
TIPO (49)
    à esquerda: 13 14 15 16 17, à direita: 9 10 11 12 23 24
ID (50)
    à esquerda: 18 19, à direita: 9 10 11 12 18 33
FUNCTION (51)
    à esquerda: 20, à direita: 7
ARGS (52)
    à esquerda: 21 22, à direita: 20
IDS (53)
    à esquerda: 23 24, à direita: 21 23
PRINCIPAL (54)
    à esquerda: 25, à direita: 1
CMDS (55)
    à esquerda: 26 27, à direita: 25 26 42
CMD (56)
    à esquerda: 28 29 30 31 32, à direita: 20 26 41 43 44
CMD_ATRIB (57)
    à esquerda: 33, à direita: 32
VETOR (58)
    à esquerda: 34 35 36 37, à direita: 12
CONDICAO (59)
    à esquerda: 38 39 40, à direita: 41 43 44
CMD_FOR (60)
    à esquerda: 41, à direita: 30
BLOCO (61)
    à esquerda: 42, à direita: 31
CMD_IF (62)
    à esquerda: 43 44, à direita: 29
SAIDA (63)
    à esquerda: 45, à direita: 28
E (64)
    à esquerda: 46 47 48 49 50 51 52, à direita: 33 38 39 40 41 45
    46 47 48 49 50 51 57
F (65)
    à esquerda: 53 54 55 56 57, à direita: 52


State 0

    0 $accept: . S $end

    _INT     deslocar, e ir ao estado 1
    _FLOAT   deslocar, e ir ao estado 2
    _DOUBLE  deslocar, e ir ao estado 3
    _CHAR    deslocar, e ir ao estado 4
    _STRING  deslocar, e ir ao estado 5
    '<'      deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 5 (MIOLOS)

    S         ir ao estado 7
    MIOLOS    ir ao estado 8
    MIOLO     ir ao estado 9
    DECLS     ir ao estado 10
    DECL      ir ao estado 11
    TIPO      ir ao estado 12
    FUNCTION  ir ao estado 13


State 1

   13 TIPO: _INT .

    $padrão  reduzir usando a regra 13 (TIPO)


State 2

   14 TIPO: _FLOAT .

    $padrão  reduzir usando a regra 14 (TIPO)


State 3

   15 TIPO: _DOUBLE .

    $padrão  reduzir usando a regra 15 (TIPO)


State 4

   16 TIPO: _CHAR .

    $padrão  reduzir usando a regra 16 (TIPO)


State 5

   17 TIPO: _STRING .

    $padrão  reduzir usando a regra 17 (TIPO)


State 6

   20 FUNCTION: '<' . _FUNCTION _ID '(' ARGS ')' '>' CMD '<' '/' _FUNCTION '>'

    _FUNCTION  deslocar, e ir ao estado 14


State 7

    0 $accept: S . $end

    $end  deslocar, e ir ao estado 15


State 8

    1 S: MIOLOS . ABRE PRINCIPAL FECHA

    _HTPL  deslocar, e ir ao estado 16

    ABRE  ir ao estado 17


State 9

    4 MIOLOS: MIOLO . MIOLOS

    _INT     deslocar, e ir ao estado 1
    _FLOAT   deslocar, e ir ao estado 2
    _DOUBLE  deslocar, e ir ao estado 3
    _CHAR    deslocar, e ir ao estado 4
    _STRING  deslocar, e ir ao estado 5
    '<'      deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 5 (MIOLOS)

    MIOLOS    ir ao estado 18
    MIOLO     ir ao estado 9
    DECLS     ir ao estado 10
    DECL      ir ao estado 11
    TIPO      ir ao estado 12
    FUNCTION  ir ao estado 13


State 10

    6 MIOLO: DECLS .

    $padrão  reduzir usando a regra 6 (MIOLO)


State 11

    8 DECLS: DECL . ';'

    ';'  deslocar, e ir ao estado 19


State 12

    9 DECL: TIPO . ID
   10     | TIPO . ID '=' _CTE_INTEGER
   11     | TIPO . ID '=' _CTE_FLOAT
   12     | TIPO . ID VETOR

    _ID  deslocar, e ir ao estado 20

    ID  ir ao estado 21


State 13

    7 MIOLO: FUNCTION .

    $padrão  reduzir usando a regra 7 (MIOLO)


State 14

   20 FUNCTION: '<' _FUNCTION . _ID '(' ARGS ')' '>' CMD '<' '/' _FUNCTION '>'

    _ID  deslocar, e ir ao estado 22


State 15

    0 $accept: S $end .

    $padrão  aceitar


State 16

    2 ABRE: _HTPL .

    $padrão  reduzir usando a regra 2 (ABRE)


State 17

    1 S: MIOLOS ABRE . PRINCIPAL FECHA

    _ID     deslocar, e ir ao estado 20
    _BLOCK  deslocar, e ir ao estado 23
    _PRINT  deslocar, e ir ao estado 24
    '<'     deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 27 (CMDS)

    ID         ir ao estado 26
    PRINCIPAL  ir ao estado 27
    CMDS       ir ao estado 28
    CMD        ir ao estado 29
    CMD_ATRIB  ir ao estado 30
    CMD_FOR    ir ao estado 31
    BLOCO      ir ao estado 32
    CMD_IF     ir ao estado 33
    SAIDA      ir ao estado 34


State 18

    4 MIOLOS: MIOLO MIOLOS .

    $padrão  reduzir usando a regra 4 (MIOLOS)


State 19

    8 DECLS: DECL ';' .

    $padrão  reduzir usando a regra 8 (DECLS)


State 20

   19 ID: _ID .

    $padrão  reduzir usando a regra 19 (ID)


State 21

    9 DECL: TIPO ID .
   10     | TIPO ID . '=' _CTE_INTEGER
   11     | TIPO ID . '=' _CTE_FLOAT
   12     | TIPO ID . VETOR
   18 ID: ID . ',' _ID

    '='  deslocar, e ir ao estado 35
    ','  deslocar, e ir ao estado 36
    '['  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 9 (DECL)

    VETOR  ir ao estado 38


State 22

   20 FUNCTION: '<' _FUNCTION _ID . '(' ARGS ')' '>' CMD '<' '/' _FUNCTION '>'

    '('  deslocar, e ir ao estado 39


State 23

   42 BLOCO: _BLOCK . CMDS _BARRABLOCK

    _ID     deslocar, e ir ao estado 20
    _BLOCK  deslocar, e ir ao estado 23
    _PRINT  deslocar, e ir ao estado 24
    '<'     deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 27 (CMDS)

    ID         ir ao estado 26
    CMDS       ir ao estado 40
    CMD        ir ao estado 29
    CMD_ATRIB  ir ao estado 30
    CMD_FOR    ir ao estado 31
    BLOCO      ir ao estado 32
    CMD_IF     ir ao estado 33
    SAIDA      ir ao estado 34


State 24

   45 SAIDA: _PRINT . '(' E ')'

    '('  deslocar, e ir ao estado 41


State 25

   41 CMD_FOR: '<' . _FOR '(' _ID '=' E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'
   43 CMD_IF: '<' . _IF '(' CONDICAO ')' '>' CMD '<' '/' _IF '>'
   44       | '<' . _IF '(' CONDICAO ')' '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    _IF   deslocar, e ir ao estado 42
    _FOR  deslocar, e ir ao estado 43


State 26

   18 ID: ID . ',' _ID
   33 CMD_ATRIB: ID . '=' E

    '='  deslocar, e ir ao estado 44
    ','  deslocar, e ir ao estado 36


State 27

    1 S: MIOLOS ABRE PRINCIPAL . FECHA

    _BARRAHTPL  deslocar, e ir ao estado 45

    FECHA  ir ao estado 46


State 28

   25 PRINCIPAL: CMDS .

    $padrão  reduzir usando a regra 25 (PRINCIPAL)


State 29

   26 CMDS: CMD . CMDS

    _ID     deslocar, e ir ao estado 20
    _BLOCK  deslocar, e ir ao estado 23
    _PRINT  deslocar, e ir ao estado 24
    '<'     deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 27 (CMDS)

    ID         ir ao estado 26
    CMDS       ir ao estado 47
    CMD        ir ao estado 29
    CMD_ATRIB  ir ao estado 30
    CMD_FOR    ir ao estado 31
    BLOCO      ir ao estado 32
    CMD_IF     ir ao estado 33
    SAIDA      ir ao estado 34


State 30

   32 CMD: CMD_ATRIB . ';'

    ';'  deslocar, e ir ao estado 48


State 31

   30 CMD: CMD_FOR .

    $padrão  reduzir usando a regra 30 (CMD)


State 32

   31 CMD: BLOCO .

    $padrão  reduzir usando a regra 31 (CMD)


State 33

   29 CMD: CMD_IF .

    $padrão  reduzir usando a regra 29 (CMD)


State 34

   28 CMD: SAIDA . ';'

    ';'  deslocar, e ir ao estado 49


State 35

   10 DECL: TIPO ID '=' . _CTE_INTEGER
   11     | TIPO ID '=' . _CTE_FLOAT

    _CTE_FLOAT    deslocar, e ir ao estado 50
    _CTE_INTEGER  deslocar, e ir ao estado 51


State 36

   18 ID: ID ',' . _ID

    _ID  deslocar, e ir ao estado 52


State 37

   34 VETOR: '[' . _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' . _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   36      | '[' . _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   37      | '[' . _CTE_INTEGER ']'

    _CTE_INTEGER  deslocar, e ir ao estado 53


State 38

   12 DECL: TIPO ID VETOR .

    $padrão  reduzir usando a regra 12 (DECL)


State 39

   20 FUNCTION: '<' _FUNCTION _ID '(' . ARGS ')' '>' CMD '<' '/' _FUNCTION '>'

    _INT     deslocar, e ir ao estado 1
    _FLOAT   deslocar, e ir ao estado 2
    _DOUBLE  deslocar, e ir ao estado 3
    _CHAR    deslocar, e ir ao estado 4
    _STRING  deslocar, e ir ao estado 5

    $padrão  reduzir usando a regra 22 (ARGS)

    TIPO  ir ao estado 54
    ARGS  ir ao estado 55
    IDS   ir ao estado 56


State 40

   42 BLOCO: _BLOCK CMDS . _BARRABLOCK

    _BARRABLOCK  deslocar, e ir ao estado 57


State 41

   45 SAIDA: _PRINT '(' . E ')'

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 63
    F  ir ao estado 64


State 42

   43 CMD_IF: '<' _IF . '(' CONDICAO ')' '>' CMD '<' '/' _IF '>'
   44       | '<' _IF . '(' CONDICAO ')' '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    '('  deslocar, e ir ao estado 65


State 43

   41 CMD_FOR: '<' _FOR . '(' _ID '=' E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'

    '('  deslocar, e ir ao estado 66


State 44

   33 CMD_ATRIB: ID '=' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 67
    F  ir ao estado 64


State 45

    3 FECHA: _BARRAHTPL .

    $padrão  reduzir usando a regra 3 (FECHA)


State 46

    1 S: MIOLOS ABRE PRINCIPAL FECHA .

    $padrão  reduzir usando a regra 1 (S)


State 47

   26 CMDS: CMD CMDS .

    $padrão  reduzir usando a regra 26 (CMDS)


State 48

   32 CMD: CMD_ATRIB ';' .

    $padrão  reduzir usando a regra 32 (CMD)


State 49

   28 CMD: SAIDA ';' .

    $padrão  reduzir usando a regra 28 (CMD)


State 50

   11 DECL: TIPO ID '=' _CTE_FLOAT .

    $padrão  reduzir usando a regra 11 (DECL)


State 51

   10 DECL: TIPO ID '=' _CTE_INTEGER .

    $padrão  reduzir usando a regra 10 (DECL)


State 52

   18 ID: ID ',' _ID .

    $padrão  reduzir usando a regra 18 (ID)


State 53

   34 VETOR: '[' _CTE_INTEGER . ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' _CTE_INTEGER . ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   36      | '[' _CTE_INTEGER . ']' '[' _CTE_INTEGER ']'
   37      | '[' _CTE_INTEGER . ']'

    ']'  deslocar, e ir ao estado 68


State 54

   23 IDS: TIPO . _ID ',' IDS
   24    | TIPO . _ID

    _ID  deslocar, e ir ao estado 69


State 55

   20 FUNCTION: '<' _FUNCTION _ID '(' ARGS . ')' '>' CMD '<' '/' _FUNCTION '>'

    ')'  deslocar, e ir ao estado 70


State 56

   21 ARGS: IDS .

    $padrão  reduzir usando a regra 21 (ARGS)


State 57

   42 BLOCO: _BLOCK CMDS _BARRABLOCK .

    $padrão  reduzir usando a regra 42 (BLOCO)


State 58

   56 F: _ID .

    $padrão  reduzir usando a regra 56 (F)


State 59

   54 F: _CTE_FLOAT .

    $padrão  reduzir usando a regra 54 (F)


State 60

   53 F: _CTE_STRING .

    $padrão  reduzir usando a regra 53 (F)


State 61

   55 F: _CTE_INTEGER .

    $padrão  reduzir usando a regra 55 (F)


State 62

   57 F: '(' . E ')'

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 71
    F  ir ao estado 64


State 63

   45 SAIDA: _PRINT '(' E . ')'
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    _MAISMAIS  deslocar, e ir ao estado 72
    '+'        deslocar, e ir ao estado 73
    '-'        deslocar, e ir ao estado 74
    '*'        deslocar, e ir ao estado 75
    '/'        deslocar, e ir ao estado 76
    '%'        deslocar, e ir ao estado 77
    ')'        deslocar, e ir ao estado 78


State 64

   52 E: F .

    $padrão  reduzir usando a regra 52 (E)


State 65

   43 CMD_IF: '<' _IF '(' . CONDICAO ')' '>' CMD '<' '/' _IF '>'
   44       | '<' _IF '(' . CONDICAO ')' '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    CONDICAO  ir ao estado 79
    E         ir ao estado 80
    F         ir ao estado 64


State 66

   41 CMD_FOR: '<' _FOR '(' . _ID '=' E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'

    _ID  deslocar, e ir ao estado 81


State 67

   33 CMD_ATRIB: ID '=' E .
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    _MAISMAIS  deslocar, e ir ao estado 72
    '+'        deslocar, e ir ao estado 73
    '-'        deslocar, e ir ao estado 74
    '*'        deslocar, e ir ao estado 75
    '/'        deslocar, e ir ao estado 76
    '%'        deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 33 (CMD_ATRIB)


State 68

   34 VETOR: '[' _CTE_INTEGER ']' . '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' _CTE_INTEGER ']' . '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   36      | '[' _CTE_INTEGER ']' . '[' _CTE_INTEGER ']'
   37      | '[' _CTE_INTEGER ']' .

    '['  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 37 (VETOR)


State 69

   23 IDS: TIPO _ID . ',' IDS
   24    | TIPO _ID .

    ','  deslocar, e ir ao estado 83

    $padrão  reduzir usando a regra 24 (IDS)


State 70

   20 FUNCTION: '<' _FUNCTION _ID '(' ARGS ')' . '>' CMD '<' '/' _FUNCTION '>'

    '>'  deslocar, e ir ao estado 84


State 71

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS
   57 F: '(' E . ')'

    _MAISMAIS  deslocar, e ir ao estado 72
    '+'        deslocar, e ir ao estado 73
    '-'        deslocar, e ir ao estado 74
    '*'        deslocar, e ir ao estado 75
    '/'        deslocar, e ir ao estado 76
    '%'        deslocar, e ir ao estado 77
    ')'        deslocar, e ir ao estado 85


State 72

   51 E: E _MAISMAIS .

    $padrão  reduzir usando a regra 51 (E)


State 73

   46 E: E '+' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 86
    F  ir ao estado 64


State 74

   47 E: E '-' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 87
    F  ir ao estado 64


State 75

   48 E: E '*' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 88
    F  ir ao estado 64


State 76

   49 E: E '/' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 89
    F  ir ao estado 64


State 77

   50 E: E '%' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 90
    F  ir ao estado 64


State 78

   45 SAIDA: _PRINT '(' E ')' .

    $padrão  reduzir usando a regra 45 (SAIDA)


State 79

   43 CMD_IF: '<' _IF '(' CONDICAO . ')' '>' CMD '<' '/' _IF '>'
   44       | '<' _IF '(' CONDICAO . ')' '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    ')'  deslocar, e ir ao estado 91


State 80

   38 CONDICAO: E . '>' E
   39         | E . '<' E
   40         | E . _COMPARACAO E
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    _COMPARACAO  deslocar, e ir ao estado 92
    _MAISMAIS    deslocar, e ir ao estado 72
    '+'          deslocar, e ir ao estado 73
    '-'          deslocar, e ir ao estado 74
    '*'          deslocar, e ir ao estado 75
    '/'          deslocar, e ir ao estado 76
    '%'          deslocar, e ir ao estado 77
    '<'          deslocar, e ir ao estado 93
    '>'          deslocar, e ir ao estado 94


State 81

   41 CMD_FOR: '<' _FOR '(' _ID . '=' E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'

    '='  deslocar, e ir ao estado 95


State 82

   34 VETOR: '[' _CTE_INTEGER ']' '[' . _CTE_INTEGER ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' _CTE_INTEGER ']' '[' . _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   36      | '[' _CTE_INTEGER ']' '[' . _CTE_INTEGER ']'

    _CTE_INTEGER  deslocar, e ir ao estado 96


State 83

   23 IDS: TIPO _ID ',' . IDS

    _INT     deslocar, e ir ao estado 1
    _FLOAT   deslocar, e ir ao estado 2
    _DOUBLE  deslocar, e ir ao estado 3
    _CHAR    deslocar, e ir ao estado 4
    _STRING  deslocar, e ir ao estado 5

    TIPO  ir ao estado 54
    IDS   ir ao estado 97


State 84

   20 FUNCTION: '<' _FUNCTION _ID '(' ARGS ')' '>' . CMD '<' '/' _FUNCTION '>'

    _ID     deslocar, e ir ao estado 20
    _BLOCK  deslocar, e ir ao estado 23
    _PRINT  deslocar, e ir ao estado 24
    '<'     deslocar, e ir ao estado 25

    ID         ir ao estado 26
    CMD        ir ao estado 98
    CMD_ATRIB  ir ao estado 30
    CMD_FOR    ir ao estado 31
    BLOCO      ir ao estado 32
    CMD_IF     ir ao estado 33
    SAIDA      ir ao estado 34


State 85

   57 F: '(' E ')' .

    $padrão  reduzir usando a regra 57 (F)


State 86

   46 E: E . '+' E
   46  | E '+' E .
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '%'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 46 (E)


State 87

   46 E: E . '+' E
   47  | E . '-' E
   47  | E '-' E .
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '%'  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 47 (E)


State 88

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   48  | E '*' E .
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    $padrão  reduzir usando a regra 48 (E)


State 89

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   49  | E '/' E .
   50  | E . '%' E
   51  | E . _MAISMAIS

    $padrão  reduzir usando a regra 49 (E)


State 90

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   50  | E '%' E .
   51  | E . _MAISMAIS

    $padrão  reduzir usando a regra 50 (E)


State 91

   43 CMD_IF: '<' _IF '(' CONDICAO ')' . '>' CMD '<' '/' _IF '>'
   44       | '<' _IF '(' CONDICAO ')' . '>' CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    '>'  deslocar, e ir ao estado 99


State 92

   40 CONDICAO: E _COMPARACAO . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 100
    F  ir ao estado 64


State 93

   39 CONDICAO: E '<' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 101
    F  ir ao estado 64


State 94

   38 CONDICAO: E '>' . E

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 102
    F  ir ao estado 64


State 95

   41 CMD_FOR: '<' _FOR '(' _ID '=' . E ';' CONDICAO ';' E ')' '>' CMD '<' '/' _FOR '>'

    _ID           deslocar, e ir ao estado 58
    _CTE_FLOAT    deslocar, e ir ao estado 59
    _CTE_STRING   deslocar, e ir ao estado 60
    _CTE_INTEGER  deslocar, e ir ao estado 61
    '('           deslocar, e ir ao estado 62

    E  ir ao estado 103
    F  ir ao estado 64


State 96

   34 VETOR: '[' _CTE_INTEGER ']' '[' _CTE_INTEGER . ']' '[' _CTE_INTEGER ']' '[' _CTE_INTEGER ']'
   35      | '[' _CTE_INTEGER ']' '[' _CTE_INTEGER . ']' '[' _CTE_INTEGER ']'
   36      | '[' _CTE_INTEGER ']' '[' _CTE_INTEGER . ']'

    ']'  deslocar, e ir ao estado 104


State 97

   23 IDS: TIPO _ID ',' IDS .

    $padrão  reduzir usando a regra 23 (IDS)


State 98

   20 FUNCTION: '<' _FUNCTION _ID '(' ARGS ')' '>' CMD . '<' '/' _FUNCTION '>'

    '<'  deslocar, e ir ao estado 105


State 99

   43 CMD_IF: '<' _IF '(' CONDICAO ')' '>' . CMD '<' '/' _IF '>'
   44       | '<' _IF '(' CONDICAO ')' '>' . CMD '<' _ELSE '>' CMD '<' '/' _IF '>'

    _ID     deslocar, e ir ao estado 20
    _BLOCK  deslocar, e ir ao estado 23
    _PRINT  deslocar, e ir ao estado 24
    '<'     deslocar, e ir ao estado 25

    ID         ir ao estado 26
    CMD        ir ao estado 106
    CMD_ATRIB  ir ao estado 30
    CMD_FOR    ir ao estado 31
    BLOCO      ir ao estado 32
    CMD_IF     ir ao estado 33
    SAIDA      ir ao estado 34


State 100

   40 CONDICAO: E _COMPARACAO E .
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    _MAISMAIS  deslocar, e ir ao estado 72
    '+'        deslocar, e ir ao estado 73
    '-'        deslocar, e ir ao estado 74
    '*'        deslocar, e ir ao estado 75
    '/'        deslocar, e ir ao estado 76
    '%'        deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 40 (CONDICAO)


State 101

   39 CONDICAO: E '<' E .
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS

    _MAISMAIS  deslocar, e ir ao estado 72
    '+'        deslocar, e ir ao estado 73
    '-'        deslocar, e ir ao estado 74
    '*'        deslocar, e ir ao estado 75
    '/'        deslocar, e ir ao estado 76
    '%'        deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 39 (CONDICAO)


State 102

   38 CONDICAO: E '>' E .
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | E . _MAISMAIS
